[gd_scene load_steps=3 format=3 uid="uid://bckqfexegpt58"]

[ext_resource type="Script" uid="uid://1tuknp7lrqh2" path="res://scenes/Scripts/shop.gd" id="1_lx5au"]

[sub_resource type="LabelSettings" id="LabelSettings_xfvoa"]
font_size = 40

[node name="shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_lx5au")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -167.0
offset_right = 320.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="restore health" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.5
text = "-10 RESTORE HEALTH"

[node name="upgrade health" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.5
text = "-20 UPGRADE HEALTH"

[node name="upgrade stamina" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.5
text = "-20 UPGRADE STAMINA"

[node name="upgrade stamina regen" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.5
text = "-20 UPGRADE STAMINA REGENERATION"

[node name="upgrade weapon speed" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.5
text = "-25 UPGRADE WEAPON SPEED"

[node name="upgrade weapon damage" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.5
text = "-25 UPGRADE WEAPON DAMAGE"

[node name="exit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 44.0
offset_right = 628.0
offset_bottom = 99.0
text = "SHOP"
label_settings = SubResource("LabelSettings_xfvoa")

[connection signal="pressed" from="PanelContainer/VBoxContainer/restore health" to="." method="_on_restore_health_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/upgrade health" to="." method="_on_upgrade_health_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/upgrade stamina" to="." method="_on_upgrade_stamina_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/upgrade stamina regen" to="." method="_on_upgrade_stamina_regen_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/upgrade weapon speed" to="." method="_on_upgrade_weapon_speed_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/upgrade weapon damage" to="." method="_on_upgrade_weapon_damage_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
